import "goby/protobuf/option_extensions.proto";
import "goby/protobuf/app_base_config.proto";

package goby.core.protobuf;

message LiaisonConfig
{
  optional AppBaseConfig base = 1 [(description)="params shared with all goby applications"];

  optional string http_address = 2 [default="localhost", (description)="address to bind on; same as Wt --http-address"];
  optional uint32 http_port = 3 [default=54321, (description)="address to bind on; same as Wt --http-port"];

  optional string docroot = 4 [default="/home/toby/goby/2.0/share/liaison", (description)="path to static objects (e.g. images) root; same as Wt --docroot"];
  
  optional string additional_wt_http_params = 5 [(example)="--accesslog=/tmp/access.log"];

  extensions 1000 to max;
}

extend LiaisonConfig
{
  optional MOOSScopeConfig moos_scope_config = 1000;
}


message MOOSScopeConfig
{
  repeated string subscription = 1;
}
